# pi-cluster-control

./: .gitignore  CMakeLists.txt  bootstrap.sh  build.sh  forge.py  forge.sh  modules.yaml  requirements.txt  scaffold_module.sh  setup-hooks.sh  temp.bdd
agent/test/: CMakeLists.txt  test_1_agent_heartbeat__agent_sends_heartbeat.cpp  test_1_agent_heartbeat_agent_sends_heartbeat.cpp  test_2_monitor_local_services__docker_is_active.cpp  test_2_monitor_local_services__k3s_is_inactive.cpp  test_2_monitor_local_services_docker_is_active.cpp  test_2_monitor_local_services_k3s_is_inactive.cpp  test_3_agent_package_reporting__agent_lists_all_packages.cpp  test_3_agent_package_reporting__agent_lists_simplified_packages.cpp  test_3_agent_package_reporting_agent_lists_all_packages.cpp  test_3_agent_package_reporting_agent_lists_simplified_packages.cpp  test_4_remote_command_execution__execute_shell_command_on_target_node.cpp  test_4_remote_command_execution__handle_command_timeouts.cpp  test_4_remote_command_execution__return_execution_result_to_master.cpp  test_4_remote_command_execution__sanitize_and_validate_incoming_commands.cpp  test_4_remote_command_execution_execute_shell_command_on_target_node.cpp  test_4_remote_command_execution_handle_command_timeouts.cpp  test_4_remote_command_execution_return_execution_result_to_master.cpp  test_4_remote_command_execution_sanitize_and_validate_incoming_commands.cpp  test_agent.cpp
backend/test/: CMakeLists.txt  test_1_backend_access_and_telemetry__authenticate_and_authorize_users.cpp  test_1_backend_access_and_telemetry__collect_and_store_agent_telemetry.cpp  test_1_backend_access_and_telemetry__expose_service_api_endpoints.cpp  test_1_backend_access_and_telemetry_authenticate_and_authorize_users.cpp  test_1_backend_access_and_telemetry_collect_and_store_agent_telemetry.cpp  test_1_backend_access_and_telemetry_expose_service_api_endpoints.cpp  test_2_backend_automation_and_alerts__log_events_and_errors.cpp  test_2_backend_automation_and_alerts__notify_on_critical_conditions.cpp  test_2_backend_automation_and_alerts__trigger_rule_based_automation.cpp  test_2_backend_automation_and_alerts_log_events_and_errors.cpp  test_2_backend_automation_and_alerts_notify_on_critical_conditions.cpp  test_2_backend_automation_and_alerts_trigger_rule_based_automation.cpp  test_3_backend_realtime_testing_uploads__handle_script_and_config_uploads.cpp  test_3_backend_realtime_testing_uploads__run_regression_checks_on_upstream_modules.cpp  test_3_backend_realtime_testing_uploads__stream_real_time_cluster_updates.cpp  test_3_backend_realtime_testing_uploads_handle_script_and_config_uploads.cpp  test_3_backend_realtime_testing_uploads_run_regression_checks_on_upstream_modules.cpp  test_3_backend_realtime_testing_uploads_stream_real_time_cluster_updates.cpp  test_4_backend_health_api__serve_aggregated_telemetry_metrics.cpp  test_4_backend_health_api_serve_aggregated_telemetry_metrics.cpp  test_backend.cpp
cppforge/: CMakeLists.txt
cppforge/include/: cppforge.hpp  cppforge_factory.hpp
cppforge/src/: cli_logic.cpp  cppforge.cpp  main.cpp
cppforge/test/: CMakeLists.txt  test_1_Scaffolding_Core_and_Template_Safety__generate_a_new_executable_module.cpp  test_1_Scaffolding_Core_and_Template_Safety__generate_a_new_library_module.cpp  test_1_Scaffolding_Core_and_Template_Safety__generate_tests_for_a_module_with_test_true.cpp  test_1_Scaffolding_Core_and_Template_Safety__re_scaffold_updated_templates_without_overwriting_custom_files.cpp  test_1_Scaffolding_Core_and_Template_Safety__skip_generating_tests_for_module_with_test_false.cpp  test_1_Scaffolding_Core_and_Template_Safety_generate_a_new_executable_module.cpp  test_1_Scaffolding_Core_and_Template_Safety_generate_a_new_library_module.cpp  test_1_Scaffolding_Core_and_Template_Safety_generate_tests_for_a_module_with_test_true.cpp  test_1_Scaffolding_Core_and_Template_Safety_re_scaffold_updated_templates_without_overwriting_custom_files.cpp  test_1_Scaffolding_Core_and_Template_Safety_skip_generating_tests_for_module_with_test_false.cpp  test_2_CMake_Consistency_and_Hygiene__bootstrap_a_new_c_project_repository.cpp  test_2_CMake_Consistency_and_Hygiene__detect_missing_source_files_in_cmakelists_txt.cpp  test_2_CMake_Consistency_and_Hygiene__detect_unused_entries_in_cmakelists_txt.cpp  test_2_CMake_Consistency_and_Hygiene_bootstrap_a_new_c_project_repository.cpp  test_2_CMake_Consistency_and_Hygiene_detect_missing_source_files_in_cmakelists_txt.cpp  test_2_CMake_Consistency_and_Hygiene_detect_unused_entries_in_cmakelists_txt.cpp  test_3_Local_Dependency_Management__resolve_local_inter_module_dependencies.cpp  test_3_Local_Dependency_Management_resolve_local_inter_module_dependencies.cpp  test_4_Source_Analysis_and_Future_Integration__generate_yaml_metadata_for_source_files.cpp  test_4_Source_Analysis_and_Future_Integration_generate_yaml_metadata_for_source_files.cpp  test_5_Plugin_Architecture__register_and_execute_a_cppforge_plugin.cpp  test_5_Plugin_Architecture_register_and_execute_a_cppforge_plugin.cpp  test_6_Scripted_Operations_Support__register_and_execute_a_cppforge_plugin.cpp  test_6_Scripted_Operations_Support_register_and_execute_a_cppforge_plugin.cpp  test_7_Skip_non_Cpp_modules_in_scaffolding__do_not_generate_test_directory_for_non_exe_lib_modules.cpp  test_7_Skip_non_Cpp_modules_in_scaffolding_do_not_generate_test_directory_for_non_exe_lib_modules.cpp  test_cppforge.cpp
di/test/: CMakeLists.txt  test_1_di_metadata_and_constructors__parse_source_files_for_di_metadata.cpp  test_1_di_metadata_and_constructors__resolve_constructor_dependencies.cpp  test_1_di_metadata_and_constructors_parse_source_files_for_di_metadata.cpp  test_di.cpp  (+17 more)
forge-config/: CMakeLists.txt
forge-config/test/: CMakeLists.txt  (+7 more)
forge-core/: CMakeLists.txt
forge-core-tests/: CMakeLists.txt
forge-daemon/: CMakeLists.txt
forge-dag/: CMakeLists.txt
forge-di/: CMakeLists.txt
forge-parser/: CMakeLists.txt
forge-plugin/: CMakeLists.txt
forge-scaffold/: CMakeLists.txt
forge-templates/: CMakeLists.txt
forge-ui/: CMakeLists.txt
(+415 files in other folders)
